spl.output
Terminals unused in grammar

   NUMBER_CONSTANT
   word
   APOSTROPHE_T


Grammar

    0 $accept: program $end

    1 program: ID COLON_T block ENDP_T ID FULL_STOP_T

    2 block: DECLARATIONS_T declarations CODE_T statement_block
    3      | CODE_T statement_block

    4 declarations: ID OF_T TYPE_T type SEMI_COLON_T
    5             | ID OF_T TYPE_T type SEMI_COLON_T declarations
    6             | ID COMMA_T declarations

    7 statement_block: statement_block SEMI_COLON_T statement
    8                | statement

    9 statement: assignment_statement
   10          | write_statement
   11          | read_statement
   12          | if_statement
   13          | do_statement
   14          | while_statement
   15          | for_statement

   16 assignment_statement: expr ASSIGNMENT_T ID

   17 write_statement: WRITE_T BRA_T output_block KET_T
   18                | NEWLINE_T

   19 read_statement: READ_T BRA_T ID KET_T

   20 if_statement: IF_T conditional THEN_T statement_block END_IF_T
   21             | IF_T conditional THEN_T statement_block ELSE_T statement_block END_IF_T

   22 do_statement: DO_T statement_block WHILE_T conditional END_DO_T

   23 while_statement: WHILE_T conditional DO_T statement_block END_WHILE_T

   24 for_statement: FOR_T ID IS_T expr BY_T expr TO_T expr DO_T statement_block END_FOR_T

   25 output_block: output_block COMMA_T term
   26             | term

   27 constant: number_constant
   28         | character_constant

   29 character_constant: CHARACTER_CONSTANT

   30 number_constant: INTEGER_CONSTANT
   31                | REAL_CONSTANT
   32                | MINUS_T INTEGER_CONSTANT
   33                | MINUS_T REAL_CONSTANT

   34 conditional: expr comparator expr
   35            | expr comparator expr OR_T conditional
   36            | expr comparator expr AND_T conditional
   37            | NOT_T conditional

   38 comparator: EQUAL_TO_T
   39           | NOT_EQUAL_T
   40           | LESS_THAN_T
   41           | GREATER_THAN_T
   42           | LESS_THAN_EQUAL_TO_T
   43           | GREATER_THAN_EQUAL_TO_T

   44 expr: expr ADD_T term
   45     | expr MINUS_T term
   46     | term

   47 term: term MULTIPLY_T factor
   48     | term DIVIDE_T factor
   49     | factor

   50 factor: ID
   51       | constant
   52       | BRA_T expr KET_T

   53 type: INTEGER_T
   54     | REAL_T
   55     | CHARACTER_T


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 1 4 5 6 16 19 24 50
BRA_T (259) 17 19 52
KET_T (260) 17 19 52
NUMBER_CONSTANT (261)
IF_T (262) 20 21
THEN_T (263) 20 21
ELSE_T (264) 21
END_IF_T (265) 20 21
DECLARATIONS_T (266) 2
FOR_T (267) 24
IS_T (268) 24
BY_T (269) 24
TO_T (270) 24
END_FOR_T (271) 24
WRITE_T (272) 17
READ_T (273) 19
NOT_T (274) 37
AND_T (275) 36
OR_T (276) 35
END_DO_T (277) 22
WHILE_T (278) 22 23
END_WHILE_T (279) 23
NEWLINE_T (280) 18
OF_T (281) 4 5
TYPE_T (282) 4 5
word (283)
ASSIGNMENT_T (284) 16
EQUAL_TO_T (285) 38
NOT_EQUAL_T (286) 39
LESS_THAN_T (287) 40
GREATER_THAN_T (288) 41
LESS_THAN_EQUAL_TO_T (289) 42
GREATER_THAN_EQUAL_TO_T (290) 43
APOSTROPHE_T (291)
MULTIPLY_T (292) 47
ADD_T (293) 44
MINUS_T (294) 32 33 45
DIVIDE_T (295) 48
CHARACTER_CONSTANT (296) 29
INTEGER_CONSTANT (297) 30 32
REAL_CONSTANT (298) 31 33
CHARACTER_T (299) 55
INTEGER_T (300) 53
REAL_T (301) 54
CODE_T (302) 2 3
COMMA_T (303) 6 25
COLON_T (304) 1
FULL_STOP_T (305) 1
ENDP_T (306) 1
SEMI_COLON_T (307) 4 5 7
DO_T (308) 22 23 24


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0
block (56)
    on left: 2 3, on right: 1
declarations (57)
    on left: 4 5 6, on right: 2 5 6
statement_block (58)
    on left: 7 8, on right: 2 3 7 20 21 22 23 24
statement (59)
    on left: 9 10 11 12 13 14 15, on right: 7 8
assignment_statement (60)
    on left: 16, on right: 9
write_statement (61)
    on left: 17 18, on right: 10
read_statement (62)
    on left: 19, on right: 11
if_statement (63)
    on left: 20 21, on right: 12
do_statement (64)
    on left: 22, on right: 13
while_statement (65)
    on left: 23, on right: 14
for_statement (66)
    on left: 24, on right: 15
output_block (67)
    on left: 25 26, on right: 17 25
constant (68)
    on left: 27 28, on right: 51
character_constant (69)
    on left: 29, on right: 28
number_constant (70)
    on left: 30 31 32 33, on right: 27
conditional (71)
    on left: 34 35 36 37, on right: 20 21 22 23 35 36 37
comparator (72)
    on left: 38 39 40 41 42 43, on right: 34 35 36
expr (73)
    on left: 44 45 46, on right: 16 24 34 35 36 44 45 52
term (74)
    on left: 47 48 49, on right: 25 26 44 45 46 47 48
factor (75)
    on left: 50 51 52, on right: 47 48 49
type (76)
    on left: 53 54 55, on right: 4 5


state 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program  go to state 2


state 1

    1 program: ID . COLON_T block ENDP_T ID FULL_STOP_T

    COLON_T  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: ID COLON_T . block ENDP_T ID FULL_STOP_T

    DECLARATIONS_T  shift, and go to state 5
    CODE_T          shift, and go to state 6

    block  go to state 7


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 block: DECLARATIONS_T . declarations CODE_T statement_block

    ID  shift, and go to state 8

    declarations  go to state 9


state 6

    3 block: CODE_T . statement_block

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement_block       go to state 23
    statement             go to state 24
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 7

    1 program: ID COLON_T block . ENDP_T ID FULL_STOP_T

    ENDP_T  shift, and go to state 38


state 8

    4 declarations: ID . OF_T TYPE_T type SEMI_COLON_T
    5             | ID . OF_T TYPE_T type SEMI_COLON_T declarations
    6             | ID . COMMA_T declarations

    OF_T     shift, and go to state 39
    COMMA_T  shift, and go to state 40


state 9

    2 block: DECLARATIONS_T declarations . CODE_T statement_block

    CODE_T  shift, and go to state 41


state 10

   50 factor: ID .

    $default  reduce using rule 50 (factor)


state 11

   52 factor: BRA_T . expr KET_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    expr                go to state 42
    term                go to state 36
    factor              go to state 37


state 12

   20 if_statement: IF_T . conditional THEN_T statement_block END_IF_T
   21             | IF_T . conditional THEN_T statement_block ELSE_T statement_block END_IF_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    NOT_T               shift, and go to state 43
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    conditional         go to state 44
    expr                go to state 45
    term                go to state 36
    factor              go to state 37


state 13

   24 for_statement: FOR_T . ID IS_T expr BY_T expr TO_T expr DO_T statement_block END_FOR_T

    ID  shift, and go to state 46


state 14

   17 write_statement: WRITE_T . BRA_T output_block KET_T

    BRA_T  shift, and go to state 47


state 15

   19 read_statement: READ_T . BRA_T ID KET_T

    BRA_T  shift, and go to state 48


state 16

   23 while_statement: WHILE_T . conditional DO_T statement_block END_WHILE_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    NOT_T               shift, and go to state 43
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    conditional         go to state 49
    expr                go to state 45
    term                go to state 36
    factor              go to state 37


state 17

   18 write_statement: NEWLINE_T .

    $default  reduce using rule 18 (write_statement)


state 18

   32 number_constant: MINUS_T . INTEGER_CONSTANT
   33                | MINUS_T . REAL_CONSTANT

    INTEGER_CONSTANT  shift, and go to state 50
    REAL_CONSTANT     shift, and go to state 51


state 19

   29 character_constant: CHARACTER_CONSTANT .

    $default  reduce using rule 29 (character_constant)


state 20

   30 number_constant: INTEGER_CONSTANT .

    $default  reduce using rule 30 (number_constant)


state 21

   31 number_constant: REAL_CONSTANT .

    $default  reduce using rule 31 (number_constant)


state 22

   22 do_statement: DO_T . statement_block WHILE_T conditional END_DO_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement_block       go to state 52
    statement             go to state 24
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 23

    3 block: CODE_T statement_block .
    7 statement_block: statement_block . SEMI_COLON_T statement

    SEMI_COLON_T  shift, and go to state 53

    $default  reduce using rule 3 (block)


state 24

    8 statement_block: statement .

    $default  reduce using rule 8 (statement_block)


state 25

    9 statement: assignment_statement .

    $default  reduce using rule 9 (statement)


state 26

   10 statement: write_statement .

    $default  reduce using rule 10 (statement)


state 27

   11 statement: read_statement .

    $default  reduce using rule 11 (statement)


state 28

   12 statement: if_statement .

    $default  reduce using rule 12 (statement)


state 29

   13 statement: do_statement .

    $default  reduce using rule 13 (statement)


state 30

   14 statement: while_statement .

    $default  reduce using rule 14 (statement)


state 31

   15 statement: for_statement .

    $default  reduce using rule 15 (statement)


state 32

   51 factor: constant .

    $default  reduce using rule 51 (factor)


state 33

   28 constant: character_constant .

    $default  reduce using rule 28 (constant)


state 34

   27 constant: number_constant .

    $default  reduce using rule 27 (constant)


state 35

   16 assignment_statement: expr . ASSIGNMENT_T ID
   44 expr: expr . ADD_T term
   45     | expr . MINUS_T term

    ASSIGNMENT_T  shift, and go to state 54
    ADD_T         shift, and go to state 55
    MINUS_T       shift, and go to state 56


state 36

   46 expr: term .
   47 term: term . MULTIPLY_T factor
   48     | term . DIVIDE_T factor

    MULTIPLY_T  shift, and go to state 57
    DIVIDE_T    shift, and go to state 58

    $default  reduce using rule 46 (expr)


state 37

   49 term: factor .

    $default  reduce using rule 49 (term)


state 38

    1 program: ID COLON_T block ENDP_T . ID FULL_STOP_T

    ID  shift, and go to state 59


state 39

    4 declarations: ID OF_T . TYPE_T type SEMI_COLON_T
    5             | ID OF_T . TYPE_T type SEMI_COLON_T declarations

    TYPE_T  shift, and go to state 60


state 40

    6 declarations: ID COMMA_T . declarations

    ID  shift, and go to state 8

    declarations  go to state 61


state 41

    2 block: DECLARATIONS_T declarations CODE_T . statement_block

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement_block       go to state 62
    statement             go to state 24
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 42

   44 expr: expr . ADD_T term
   45     | expr . MINUS_T term
   52 factor: BRA_T expr . KET_T

    KET_T    shift, and go to state 63
    ADD_T    shift, and go to state 55
    MINUS_T  shift, and go to state 56


state 43

   37 conditional: NOT_T . conditional

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    NOT_T               shift, and go to state 43
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    conditional         go to state 64
    expr                go to state 45
    term                go to state 36
    factor              go to state 37


state 44

   20 if_statement: IF_T conditional . THEN_T statement_block END_IF_T
   21             | IF_T conditional . THEN_T statement_block ELSE_T statement_block END_IF_T

    THEN_T  shift, and go to state 65


state 45

   34 conditional: expr . comparator expr
   35            | expr . comparator expr OR_T conditional
   36            | expr . comparator expr AND_T conditional
   44 expr: expr . ADD_T term
   45     | expr . MINUS_T term

    EQUAL_TO_T               shift, and go to state 66
    NOT_EQUAL_T              shift, and go to state 67
    LESS_THAN_T              shift, and go to state 68
    GREATER_THAN_T           shift, and go to state 69
    LESS_THAN_EQUAL_TO_T     shift, and go to state 70
    GREATER_THAN_EQUAL_TO_T  shift, and go to state 71
    ADD_T                    shift, and go to state 55
    MINUS_T                  shift, and go to state 56

    comparator  go to state 72


state 46

   24 for_statement: FOR_T ID . IS_T expr BY_T expr TO_T expr DO_T statement_block END_FOR_T

    IS_T  shift, and go to state 73


state 47

   17 write_statement: WRITE_T BRA_T . output_block KET_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    output_block        go to state 74
    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    term                go to state 75
    factor              go to state 37


state 48

   19 read_statement: READ_T BRA_T . ID KET_T

    ID  shift, and go to state 76


state 49

   23 while_statement: WHILE_T conditional . DO_T statement_block END_WHILE_T

    DO_T  shift, and go to state 77


state 50

   32 number_constant: MINUS_T INTEGER_CONSTANT .

    $default  reduce using rule 32 (number_constant)


state 51

   33 number_constant: MINUS_T REAL_CONSTANT .

    $default  reduce using rule 33 (number_constant)


state 52

    7 statement_block: statement_block . SEMI_COLON_T statement
   22 do_statement: DO_T statement_block . WHILE_T conditional END_DO_T

    WHILE_T       shift, and go to state 78
    SEMI_COLON_T  shift, and go to state 53


state 53

    7 statement_block: statement_block SEMI_COLON_T . statement

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement             go to state 79
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 54

   16 assignment_statement: expr ASSIGNMENT_T . ID

    ID  shift, and go to state 80


state 55

   44 expr: expr ADD_T . term

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    term                go to state 81
    factor              go to state 37


state 56

   45 expr: expr MINUS_T . term

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    term                go to state 82
    factor              go to state 37


state 57

   47 term: term MULTIPLY_T . factor

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    factor              go to state 83


state 58

   48 term: term DIVIDE_T . factor

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    factor              go to state 84


state 59

    1 program: ID COLON_T block ENDP_T ID . FULL_STOP_T

    FULL_STOP_T  shift, and go to state 85


state 60

    4 declarations: ID OF_T TYPE_T . type SEMI_COLON_T
    5             | ID OF_T TYPE_T . type SEMI_COLON_T declarations

    CHARACTER_T  shift, and go to state 86
    INTEGER_T    shift, and go to state 87
    REAL_T       shift, and go to state 88

    type  go to state 89


state 61

    6 declarations: ID COMMA_T declarations .

    $default  reduce using rule 6 (declarations)


state 62

    2 block: DECLARATIONS_T declarations CODE_T statement_block .
    7 statement_block: statement_block . SEMI_COLON_T statement

    SEMI_COLON_T  shift, and go to state 53

    $default  reduce using rule 2 (block)


state 63

   52 factor: BRA_T expr KET_T .

    $default  reduce using rule 52 (factor)


state 64

   37 conditional: NOT_T conditional .

    $default  reduce using rule 37 (conditional)


state 65

   20 if_statement: IF_T conditional THEN_T . statement_block END_IF_T
   21             | IF_T conditional THEN_T . statement_block ELSE_T statement_block END_IF_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement_block       go to state 90
    statement             go to state 24
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 66

   38 comparator: EQUAL_TO_T .

    $default  reduce using rule 38 (comparator)


state 67

   39 comparator: NOT_EQUAL_T .

    $default  reduce using rule 39 (comparator)


state 68

   40 comparator: LESS_THAN_T .

    $default  reduce using rule 40 (comparator)


state 69

   41 comparator: GREATER_THAN_T .

    $default  reduce using rule 41 (comparator)


state 70

   42 comparator: LESS_THAN_EQUAL_TO_T .

    $default  reduce using rule 42 (comparator)


state 71

   43 comparator: GREATER_THAN_EQUAL_TO_T .

    $default  reduce using rule 43 (comparator)


state 72

   34 conditional: expr comparator . expr
   35            | expr comparator . expr OR_T conditional
   36            | expr comparator . expr AND_T conditional

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    expr                go to state 91
    term                go to state 36
    factor              go to state 37


state 73

   24 for_statement: FOR_T ID IS_T . expr BY_T expr TO_T expr DO_T statement_block END_FOR_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    expr                go to state 92
    term                go to state 36
    factor              go to state 37


state 74

   17 write_statement: WRITE_T BRA_T output_block . KET_T
   25 output_block: output_block . COMMA_T term

    KET_T    shift, and go to state 93
    COMMA_T  shift, and go to state 94


state 75

   26 output_block: term .
   47 term: term . MULTIPLY_T factor
   48     | term . DIVIDE_T factor

    MULTIPLY_T  shift, and go to state 57
    DIVIDE_T    shift, and go to state 58

    $default  reduce using rule 26 (output_block)


state 76

   19 read_statement: READ_T BRA_T ID . KET_T

    KET_T  shift, and go to state 95


state 77

   23 while_statement: WHILE_T conditional DO_T . statement_block END_WHILE_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement_block       go to state 96
    statement             go to state 24
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 78

   22 do_statement: DO_T statement_block WHILE_T . conditional END_DO_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    NOT_T               shift, and go to state 43
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    conditional         go to state 97
    expr                go to state 45
    term                go to state 36
    factor              go to state 37


state 79

    7 statement_block: statement_block SEMI_COLON_T statement .

    $default  reduce using rule 7 (statement_block)


state 80

   16 assignment_statement: expr ASSIGNMENT_T ID .

    $default  reduce using rule 16 (assignment_statement)


state 81

   44 expr: expr ADD_T term .
   47 term: term . MULTIPLY_T factor
   48     | term . DIVIDE_T factor

    MULTIPLY_T  shift, and go to state 57
    DIVIDE_T    shift, and go to state 58

    $default  reduce using rule 44 (expr)


state 82

   45 expr: expr MINUS_T term .
   47 term: term . MULTIPLY_T factor
   48     | term . DIVIDE_T factor

    MULTIPLY_T  shift, and go to state 57
    DIVIDE_T    shift, and go to state 58

    $default  reduce using rule 45 (expr)


state 83

   47 term: term MULTIPLY_T factor .

    $default  reduce using rule 47 (term)


state 84

   48 term: term DIVIDE_T factor .

    $default  reduce using rule 48 (term)


state 85

    1 program: ID COLON_T block ENDP_T ID FULL_STOP_T .

    $default  reduce using rule 1 (program)


state 86

   55 type: CHARACTER_T .

    $default  reduce using rule 55 (type)


state 87

   53 type: INTEGER_T .

    $default  reduce using rule 53 (type)


state 88

   54 type: REAL_T .

    $default  reduce using rule 54 (type)


state 89

    4 declarations: ID OF_T TYPE_T type . SEMI_COLON_T
    5             | ID OF_T TYPE_T type . SEMI_COLON_T declarations

    SEMI_COLON_T  shift, and go to state 98


state 90

    7 statement_block: statement_block . SEMI_COLON_T statement
   20 if_statement: IF_T conditional THEN_T statement_block . END_IF_T
   21             | IF_T conditional THEN_T statement_block . ELSE_T statement_block END_IF_T

    ELSE_T        shift, and go to state 99
    END_IF_T      shift, and go to state 100
    SEMI_COLON_T  shift, and go to state 53


state 91

   34 conditional: expr comparator expr .
   35            | expr comparator expr . OR_T conditional
   36            | expr comparator expr . AND_T conditional
   44 expr: expr . ADD_T term
   45     | expr . MINUS_T term

    AND_T    shift, and go to state 101
    OR_T     shift, and go to state 102
    ADD_T    shift, and go to state 55
    MINUS_T  shift, and go to state 56

    $default  reduce using rule 34 (conditional)


state 92

   24 for_statement: FOR_T ID IS_T expr . BY_T expr TO_T expr DO_T statement_block END_FOR_T
   44 expr: expr . ADD_T term
   45     | expr . MINUS_T term

    BY_T     shift, and go to state 103
    ADD_T    shift, and go to state 55
    MINUS_T  shift, and go to state 56


state 93

   17 write_statement: WRITE_T BRA_T output_block KET_T .

    $default  reduce using rule 17 (write_statement)


state 94

   25 output_block: output_block COMMA_T . term

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    term                go to state 104
    factor              go to state 37


state 95

   19 read_statement: READ_T BRA_T ID KET_T .

    $default  reduce using rule 19 (read_statement)


state 96

    7 statement_block: statement_block . SEMI_COLON_T statement
   23 while_statement: WHILE_T conditional DO_T statement_block . END_WHILE_T

    END_WHILE_T   shift, and go to state 105
    SEMI_COLON_T  shift, and go to state 53


state 97

   22 do_statement: DO_T statement_block WHILE_T conditional . END_DO_T

    END_DO_T  shift, and go to state 106


state 98

    4 declarations: ID OF_T TYPE_T type SEMI_COLON_T .
    5             | ID OF_T TYPE_T type SEMI_COLON_T . declarations

    ID  shift, and go to state 8

    $default  reduce using rule 4 (declarations)

    declarations  go to state 107


state 99

   21 if_statement: IF_T conditional THEN_T statement_block ELSE_T . statement_block END_IF_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    IF_T                shift, and go to state 12
    FOR_T               shift, and go to state 13
    WRITE_T             shift, and go to state 14
    READ_T              shift, and go to state 15
    WHILE_T             shift, and go to state 16
    NEWLINE_T           shift, and go to state 17
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21
    DO_T                shift, and go to state 22

    statement_block       go to state 108
    statement             go to state 24
    assignment_statement  go to state 25
    write_statement       go to state 26
    read_statement        go to state 27
    if_statement          go to state 28
    do_statement          go to state 29
    while_statement       go to state 30
    for_statement         go to state 31
    constant              go to state 32
    character_constant    go to state 33
    number_constant       go to state 34
    expr                  go to state 35
    term                  go to state 36
    factor                go to state 37


state 100

   20 if_statement: IF_T conditional THEN_T statement_block END_IF_T .

    $default  reduce using rule 20 (if_statement)


state 101

   36 conditional: expr comparator expr AND_T . conditional

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    NOT_T               shift, and go to state 43
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    conditional         go to state 109
    expr                go to state 45
    term                go to state 36
    factor              go to state 37


state 102

   35 conditional: expr comparator expr OR_T . conditional

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    NOT_T               shift, and go to state 43
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    conditional         go to state 110
    expr                go to state 45
    term                go to state 36
    factor              go to state 37


state 103

   24 for_statement: FOR_T ID IS_T expr BY_T . expr TO_T expr DO_T statement_block END_FOR_T

    ID                  shift, and go to state 10
    BRA_T               shift, and go to state 11
    MINUS_T             shift, and go to state 18
    CHARACTER_CONSTANT  shift, and go to state 19
    INTEGER_CONSTANT    shift, and go to state 20
    REAL_CONSTANT       shift, and go to state 21

    constant            go to state 32
    character_constant  go to state 33
    number_constant     go to state 34
    expr                go to state 111
    term                go to state 36
    factor              go to state 37


state 104

   25 output_block: output_block COMMA_T term .
   47 term: term . MULTIPLY_T factor
   48     | term . DIVIDE_T factor

    MULTIPLY_T  shift, and go to state 57
    DIVIDE_T    shift, and go to state 58

    $default  reduce using rule 25 (output_block)


state 105

   23 while_statement: WHILE_T conditional DO_T statement_block END_WHILE_T .

    $default  reduce using rule 23 (while_statement)


state 106

   22 do_statement: DO_T statement_block WHILE_T conditional END_DO_T .

    $default  reduce using rule 22 (do_statement)


state 107
